add a flask server start painting svg with svg.js

--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../src/paint.js"></script>
 </head>
-<body>
+<body onload="load_climate_data()">
     <img
     src="../img/co2.svg"
     alt="co2 data"/>
